[feature] 注單bar UI更新

--- a/app/src/main/res/drawable/bg_icon_bottom_bar.xml
+++ b/app/src/main/res/drawable/bg_icon_bottom_bar.xml
@@ -1,50 +1,37 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:aapt="http://schemas.android.com/aapt"
     android:width="390dp"
-    android:height="84dp"
+    android:height="92dp"
     android:viewportWidth="390"
-    android:viewportHeight="84">
-
-    <group>
-
-        <clip-path android:pathData="M0 0H390V84H0V0Z" />
-
-        <group
-            android:pivotX="195"
-            android:pivotY="42"
-            android:rotation="90"
-            android:scaleX="2"
-            android:scaleY="2"
-            android:translateX="0.465"
-            android:translateY="0">
-
-            <path android:pathData="M0 0V84H390V0">
-
-                <aapt:attr name="android:fillColor">
-
-                    <gradient
-                        android:endX="292.5"
-                        android:endY="42"
-                        android:startX="97.5"
-                        android:startY="42"
-                        android:type="linear">
-
-                        <item
-                            android:color="#F6F9FF"
-                            android:offset="0" />
-
-                        <item
-                            android:color="#ECF2FD"
-                            android:offset="1" />
-
-                    </gradient>
-
-                </aapt:attr>
-
-            </path>
-
-        </group>
-
-    </group>
-
+    android:viewportHeight="92">
+    <path
+        android:pathData="M0,8H390V92H0V8Z">
+        <aapt:attr name="android:fillColor">
+            <gradient
+                android:startX="-13.58"
+                android:startY="8"
+                android:endX="-13.58"
+                android:endY="92"
+                android:type="linear">
+                <item android:offset="0" android:color="#FFF6F9FF"/>
+                <item android:offset="1" android:color="#FFECF2FD"/>
+            </gradient>
+        </aapt:attr>
+    </path>
+    <path
+        android:strokeWidth="1"
+        android:pathData="M0.5,8.5H389.5V91.5H0.5V8.5Z"
+        android:fillColor="#00000000">
+        <aapt:attr name="android:strokeColor">
+            <gradient
+                android:startX="-182.69"
+                android:startY="27.67"
+                android:endX="-172.46"
+                android:endY="129.07"
+                android:type="linear">
+                <item android:offset="0" android:color="#FFFAFCFF"/>
+                <item android:offset="1" android:color="#FFFFFFFF"/>
+            </gradient>
+        </aapt:attr>
+    </path>
 </vector>
