--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -77,6 +77,7 @@
     <color name="color_33DDDDDD">#33DDDDDD</color>
     <color name="color_643C00">#643C00</color>
     <color name="color_ECCD86">#ECCD86</color>
+    <color name="color_D8E7FF">#D8E7FF</color>
 
     <color name="color_F5F5F5">#F5F5F5</color>
     <color name="color_7F7F7F">#7F7F7F</color>
