--- a/app/src/main/res/drawable/bg_gradient_bet_info_title_v2.xml
+++ b/app/src/main/res/drawable/bg_gradient_bet_info_title_v2.xml
@@ -10,10 +10,10 @@
             <corners
                 android:topLeftRadius="14dp"
                 android:topRightRadius="14dp" />
-            <solid android:color="@color/color_232426_DAEAFF" />
+            <solid android:color="@color/color_D8E7FF" />
             <stroke
                 android:width="1dp"
-                android:color="@color/color_171E26_86BAFF" />
+                android:color="@color/color_D8E7FF" />
         </shape>
     </item>
 </layer-list>
