--- a/app/src/main/res/layout/activity_main_tab.xml
+++ b/app/src/main/res/layout/activity_main_tab.xml
@@ -22,7 +22,8 @@
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:layout_marginTop="-8dp">
 
         <org.cxct.sportlottery.widget.bottomnavigationview.BottomNavigationViewEx
             android:id="@+id/bottom_navigation_view"
@@ -35,100 +36,15 @@
             app:labelVisibilityMode="labeled"
             app:menu="@menu/main_menu_navigation" />
 
-            <androidx.constraintlayout.widget.ConstraintLayout
+            <include
                 android:id="@+id/cl_bet_list_bar"
+                layout="@layout/bet_bar_layout"
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/bet_list_bar_height"
-                android:layout_marginTop="-10dp"
-                android:background="@drawable/bg_gradient_bet_info_title_v2"
-                android:clickable="true"
-                android:focusable="true"
-                app:layout_constraintBottom_toTopOf="@+id/bottom_navigation_view"
+                android:layout_marginBottom="58dp"
                 android:visibility="gone"
-                tools:visibility="gone">
-
-                <ImageView
-                    android:id="@+id/iv_arrow"
-                    android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
-                    android:layout_marginEnd="@dimen/margin_7"
-                    android:paddingHorizontal="@dimen/margin_8"
-                    android:rotation="180"
-                    android:src="@drawable/ic_arrow_gray_down"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintTop_toTopOf="parent" />
-
-                <TextView
-                    android:id="@+id/tv_bet_list"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="@dimen/margin_9"
-                    android:text="@string/bet_slip"
-                    android:textAllCaps="true"
-                    android:textColor="@color/color_317FFF_0760D4"
-                    android:textSize="@dimen/textSize14sp"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintStart_toEndOf="@+id/tv_bet_list_count"
-                    app:layout_constraintTop_toTopOf="parent" />
-
-                <View
-                    android:layout_width="20dp"
-                    android:layout_height="20dp"
-                    android:background="@drawable/bg_circle_317fff_0760d4"
-                    app:layout_constraintBottom_toBottomOf="@id/tv_bet_list_count"
-                    app:layout_constraintEnd_toEndOf="@id/tv_bet_list_count"
-                    app:layout_constraintStart_toStartOf="@id/tv_bet_list_count"
-                    app:layout_constraintTop_toTopOf="@id/tv_bet_list_count" />
-
-                <TextView
-                    android:id="@+id/tv_bet_list_count"
-                    android:layout_width="18dp"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="16dp"
-                    android:gravity="center"
-                    android:textColor="@color/color_FFFFFF_FFFFFF"
-                    android:textSize="@dimen/textSize16sp"
-                    android:textStyle="bold"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent"
-                    tools:text="10" />
-
-                <TextView
-                    android:id="@+id/tv_balance_currency"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginEnd="@dimen/margin_4"
-                    android:textColor="@color/color_909090_666666"
-                    android:textSize="@dimen/textSize14sp"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintEnd_toStartOf="@id/tv_balance"
-                    app:layout_constraintTop_toTopOf="parent"
-                    tools:text="₱" />
-
-                <TextView
-                    android:id="@+id/tv_balance"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginEnd="@dimen/margin_10"
-                    android:textColor="@color/color_909090_666666"
-                    android:textSize="@dimen/textSize14sp"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintEnd_toStartOf="@id/gray_line"
-                    app:layout_constraintTop_toTopOf="parent"
-                    tools:text="9,875,241.000" />
-
-                <View
-                    android:id="@+id/gray_line"
-                    android:layout_width="1dp"
-                    android:layout_height="14dp"
-                    android:background="@color/color_404040_cccccc"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintEnd_toStartOf="@id/iv_arrow"
-                    app:layout_constraintTop_toTopOf="parent" />
-
-            </androidx.constraintlayout.widget.ConstraintLayout>
+                app:layout_constraintBottom_toBottomOf="parent"
+                tools:visibility="visible" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
     </LinearLayout>
